@@ -520,6 +520,15 @@ javadoc {
     options.addStringOption('source', '8')
     options.addStringOption('Xdoclint:all', '-quiet')
     options.addStringOption('Xmaxwarns', '10000')
+    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+      options.JFlags = [
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+	  "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+      ]
+    }
 }
 
 task javadocPrivate(type: Javadoc) {
